--- a/myshop2/requirements.txt
+++ b/myshop2/requirements.txt
@@ -1,1 +1,60 @@
 
+amqp==5.2.0
+arabic-reshaper==3.0.0
+asgiref==3.7.2
+asn1crypto==1.5.1
+billiard==4.2.0
+Brotli==1.1.0
+celery==5.3.6
+certifi==2023.11.17
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+cryptography==42.0.1
+cssselect2==0.7.0
+Django==5.0.1
+flower==2.0.1
+fonttools==4.47.2
+html5lib==1.1
+humanize==4.9.0
+idna==3.6
+kombu==5.3.5
+lxml==5.1.0
+oscrypto==1.3.0
+pillow==10.2.0
+prometheus-client==0.19.0
+prompt-toolkit==3.0.43
+pycparser==2.21
+pydyf==0.8.0
+pyHanko==0.21.0
+pyhanko-certvalidator==0.26.3
+pypdf==4.0.1
+pyphen==0.14.0
+pypng==0.20220715.0
+python-bidi==0.4.2
+python-dateutil==2.8.2
+pytz==2023.4
+PyYAML==6.0.1
+qrcode==7.4.2
+reportlab==4.0.9
+requests==2.31.0
+six==1.16.0
+sqlparse==0.4.4
+svglib==1.5.1
+tinycss2==1.2.1
+tornado==6.4
+typing_extensions==4.9.0
+tzdata==2023.4
+tzlocal==5.2
+uritools==4.0.2
+urllib3==2.2.0
+vine==5.1.0
+wcwidth==0.2.13
+webencodings==0.5.1
+xhtml2pdf==0.2.14
+zopfli==0.2.3
